syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/kjasn/simple-bank/pb";

message CreateUserRequest {
    string username = 1;
    string role = 2;
	string full_name = 3;
	string email = 4;
    string password = 5;
}

message CreateUserResponse {
    User user = 1;
}