syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/kjasn/simple-bank/pb";

message User {
    string username = 1;
	string role = 2;
	string full_name = 3;
	string email = 4;
	google.protobuf.Timestamp password_changed_at = 5;
	google.protobuf.Timestamp created_at = 6;
}

